@@ -1,4 +1,4 @@
-PrBoom 2.2.6
+PrBoom 2.4.0
 ============
 
 PrBoom is a version of the classic 3D shoot'em'up game Doom, originally
